--- a/index.html
+++ b/index.html
@@ -767,47 +767,46 @@
   min-height: 0;  
 }  
   
-/* track khusus page 4 (jangan ikut global .track) */  
-#p4 .track{  
-  flex:1;  
-  display:flex;  
-  transition: transform .35s ease;  
-  min-height: 0;  
-}  
+#p4 .track{
+  flex:1;
+  display:flex;
+  align-items: stretch;      /* penting */
+  transition: transform .35s ease;
+  min-height: 0;
+}
   
 /* slide: susun foto + note ke bawah */  
 #p4 .slide{
   min-width:100%;
+  height: 100%;              /* penting: biar semua slide sama tinggi */
   display:flex;
   flex-direction:column;
-  align-items:center;
-  justify-content:flex-start;
   gap: 10px;
   padding: 6px;
   min-height: 0;
-}  
+}
   
-#p4 .slide img{  
-  width: 100%;  
-  height: clamp(240px, 42vh, 360px);  
-  border-radius: 20px;  
-  object-fit: cover;  
-  background: rgba(255,255,255,.6); 
-  flex: 0 0 auto; 
-}  
+#p4 .slide img{
+  width: 100%;
+  flex: 1 1 auto;            /* foto ambil sisa tinggi */
+  min-height: 240px;         /* biar gak kekecilan */
+  border-radius: 20px;
+  object-fit: cover;
+  height: auto;              /* jangan clamp lagi */
+}
   
 #p4 .note{
+  width: 100%;
+  margin: 0;
+  padding: 0 10px;
+  text-align:center;
   font-weight:800;
   color: rgba(0,0,0,.62);
   font-size: 14px;
-  text-align:center;
-  padding: 0 10px;
-  margin: 0;
-  width: 100%;
 
   line-height: 1.2;
-  max-height: 3.6em;          /* ~3 baris */
-  overflow-y: auto;
+  height: 3.6em;             /* FIX: selalu setinggi 3 baris */
+  overflow-y: auto;          /* kalau lebih panjang -> scroll */
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
